# hpm_foc_test

./: .gitignore  CMakeLists.txt  README.md  pin.hpmpc  tabs.tabview.json  wireshark.lua
boards/hpm_foc_test/: board.c  board.h  hpm_foc_test.yaml  pinmux.c  pinmux.h
src/: adc_init.c  adc_init.h  can_init.c  can_init.h  main.c  mt6701_ssi_init.c  pwm_init.c  qeiv2_init.c
src/usb/: cdc_acm.c  usb_config.h
